// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericToggleTest render with jsx content 1`] = `
<div
  className="genericToggleComponent"
>
  <div
    className="toggleContainer"
  >
    <div
      className="toggleName"
    >
      test name
    </div>
    <StyledToggleBase
      ariaLabel="test name"
      checked={true}
      className="toggle"
      id="test-id-1"
      offText="Off"
      onClick={[Function]}
      onText="On"
    />
  </div>
  <div
    className="toggle-description"
  >
    <h1>
      hello
    </h1>
  </div>
</div>
`;

exports[`GenericToggleTest render with string content - toggleState : false 1`] = `
<div
  className="genericToggleComponent"
>
  <div
    className="toggleContainer"
  >
    <div
      className="toggleName"
    >
      test name
    </div>
    <StyledToggleBase
      ariaLabel="test name"
      checked={false}
      className="toggle"
      id="test-id-1"
      offText="Off"
      onClick={[Function]}
      onText="On"
    />
  </div>
  <div
    className="toggle-description"
  >
    test description
  </div>
</div>
`;

exports[`GenericToggleTest render with string content - toggleState : true 1`] = `
<div
  className="genericToggleComponent"
>
  <div
    className="toggleContainer"
  >
    <div
      className="toggleName"
    >
      test name
    </div>
    <StyledToggleBase
      ariaLabel="test name"
      checked={true}
      className="toggle"
      id="test-id-1"
      offText="Off"
      onClick={[Function]}
      onText="On"
    />
  </div>
  <div
    className="toggle-description"
  >
    test description
  </div>
</div>
`;
